# prueba_api_rest

./: readme.md
api_rest/: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  compose.yaml  dockerfile.www  makefile  pyproject.toml
api_rest/api_rest/: www.py
api_rest/api_rest/conf/: db.py  security.py  settings.py
api_rest/api_rest/models/: __init__.py  user.py
api_rest/api_rest/schemas/: user.py
api_rest/db/: env.py
api_rest/db/versions/: 138fb2a13a7e_create_users_table.py  8c0e8605ba12_create_users_table.py
api_rest/docker/www/: prestart.sh
api_rest/docs/dev/: README.md  api.md  database.md  dependencies.md  docker.md  documentation.md  makefile.md  pypi.md  settings.md  testing.md
api_rest/tests/: conftest.py  test_settings.py  test_www.py
